--- a/dapp/frontend/tsconfig.json
+++ b/dapp/frontend/tsconfig.json
@@ -1,7 +1,21 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "compilerOptions": {
+    "target": "es2020",
+    "module": "esnext",
+    "jsx": "react-jsx",
+    "moduleResolution": "node",
+    "strict": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+     "outDir": "./dist",
+      "baseUrl": ".",
+      "paths": {
+      "@/*": ["./src/*"]
+    }
+     
+  },
+  "include": ["src", "tailwind.config.cjs"],
+  "exclude": ["node_modules"]
+
 }
