--- a/dapp/frontend/package.json
+++ b/dapp/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@mysten/dapp-kit": "^0.14.47",
-    "@mysten/sui.js": "^0.54.1",
+    "@mysten/sui": "1.14.0",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/vite": "^4.0.0",
@@ -20,13 +20,14 @@
     "@wagmi/core": "^2.16.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "ethers": "^6.13.5",
+    "dotenv": "^16.4.7",
+    "ethers": "^6.11.0",
     "lucide-react": "^0.473.0",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.22.12",
-    "wagmi": "^2.14.9"
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
